@@ -38,6 +38,7 @@ table.types th { border: 1px solid; padding: .1em .25em; }
 </td><td></td></tr><tr><td>jovisa</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.jovisa.biz/images/egg%20dpf%20or%20copy.jpg">Link</a>
 </td><td></td></tr><tr><td>pink</td><td>128 x 128</td><td>No</td><td></td><td>Buildin (generic) lcd-controller definition
 </td></tr><tr><td>sevendayshop_pebble</td><td>128 x 128</td><td>No</td><td><a href="http://www.7dayshop.com/7dayshop-pebble-digital-photo-frame-1-5-tft-keyring-version-silver-irresistible-price">Link</a>
+</td><td></td></tr><tr><td>sunluxy</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.amazon.fr/gp/product/B00AQV277C/">Link</a>
 </td><td></td></tr><tr><td>white</td><td>128 x 128</td><td>No</td><td><a href="http://www.dealextreme.com/details.dx/sku.27893">Link</a>
 </td><td>Buildin (generic) lcd-controller definition
 </td></tr><tr><td>focalprice144</td><td>128 x 144</td><td>In menu</td><td></td><td></td></tr><tr><td>delightdigi_2_portrait</td><td>240 x 320</td><td>Yes</td><td><a href="http://www.ebay.com/itm/280736717264">Link</a>
